MET-7041: Code improvements (SonarQube).